tests/snapshots/integration__integration_tests__help__help_config_state_hints_clear.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - hints
    - clear
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state hints clear - Clear hints (re-show on next trigger)

Usage: [1m[36mwt config state hints clear[0m [36m[OPTIONS][0m [36m[NAME]

[1m[32mArguments:
  [36m[NAME]
          Specific hint to clear (clears all if not specified)

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...
          Verbose output (-v: hooks, templates; -vv: debug report)

Clears hint state so hints will show again on next trigger.

[1m[32mExamples

Clear all hints:
  [2mwt config state hints clear

Clear a specific hint:
  [2mwt config state hints clear worktree-path
